--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "editor.fontFamily": "cascadia code light",
-  "editor.fontSize": 14
+  "editor.fontFamily": "Consolas, 'Courier New', monospace",
+  "editor.fontSize": 15
 }
